--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.7",
     "express": "^4.17.3",
     "method-override": "^3.0.0",
